# mediacopier

./: .clang-tidy  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Dockerfile  README.md
app/: CMakeLists.txt  main.cpp
app/cli/: CMakeLists.txt
app/cli/src/: ConfigManager.cpp  ConfigStore.cpp  FeedbackGateway.cpp  config.cpp  config.hpp  execute.cpp  feedback.cpp  main.cpp  run.cpp  version.hpp.in
app/gui/: CMakeLists.txt
app/gui/src/: dialog.cpp  dialog.ui  mediacopierdialog.cpp  worker.cpp
app/mediacopier/: CMakeLists.txt  mediacopier.desktop.in
app/mediacopier-cli/: CMakeLists.txt
app/mediacopier-cli/source/: cli.cpp  cli.hpp  main.cpp
app/mediacopier-plasma/: CMakeLists.txt  mediacopier-plasma.desktop.in  mediacopier.desktop.in
app/mediacopier-plasma/source/: main.cpp
app/mediacopier/source/: main.cpp
app/src/: main.cpp
app/test/: CMakeLists.txt  test_config.cpp  test_example.cpp  test_feedback.cpp
app/test/data/: CMakeLists.txt  generate_test_data.sh
include/: run.hpp
lib/: CMakeLists.txt
lib/core/: CMakeLists.txt  version.hpp.in
lib/core/cmake/: Config.cmake.in
lib/core/source/: duplicate_check.cpp  file_info_factory.cpp  file_info_image.cpp  file_info_image_jpeg.cpp  file_info_video.cpp  file_register.cpp  operation_copy.cpp  operation_copy_jpeg.cpp  operation_move.cpp  operation_move_jpeg.cpp  operation_simulate.cpp  persistent_config.cpp
lib/core/test/: CMakeLists.txt  common_test_fixtures.hpp  file_info_type_detector.hpp  test_file_info_classes.cpp  test_file_operation_classes.cpp  test_file_register.cpp  test_persistent_config.cpp
lib/include/mediacopier/: AbstractFileInfo.hpp  AbstractFileOperation.hpp  FileInfoFactory.hpp  FileInfoImage.hpp  FileInfoImageJpeg.hpp  FileInfoJpeg.hpp  FileInfoVideo.hpp  FileOperationCopy.hpp  FileOperationCopyJpeg.hpp  FileOperationMove.hpp  FileOperationPrint.hpp  FilePathFactory.hpp  FilePathFormat.hpp  PathPattern.hpp  abstract_file_info.hpp  abstract_file_operation.hpp  exceptions.hpp  file_info_factory.hpp  file_info_image.hpp  file_info_image_jpeg.hpp  file_info_video.hpp  file_operation_copy.hpp  file_operation_copy_jpeg.hpp  file_operation_move.hpp  file_operation_move_jpeg.hpp  file_path_format.hpp
lib/src/: FileInfoFactory.cpp  FileInfoImage.cpp  FileInfoJpeg.cpp  FileInfoVideo.cpp  FileOperationCopy.cpp  FileOperationCopyJpeg.cpp  FileOperationMove.cpp  FileOperationMoveJpeg.cpp  FileOperationPrint.cpp  FilePathFactory.cpp  FilePathFormat.cpp  PathPattern.cpp  file_info_factory.cpp  file_info_image.cpp  file_info_image_jpeg.cpp  file_info_video.cpp  file_operation_copy.cpp  file_operation_copy_jpeg.cpp  file_operation_move.cpp  file_operation_move_jpeg.cpp  file_path_format.cpp
lib/test/: CMakeLists.txt  test_example.cpp  test_fileInfoClasses.cpp
lib/test/data/: CMakeLists.txt
lib/transupp/: LICENSE.md  README.md
lib/ui/: CMakeLists.txt  resources.qrc.in
lib/ui/lang/: README.md  lang_de.ts
mediacopier/: CMakeLists.txt
mediacopier-cli/: CMakeLists.txt  config.cpp  config.hpp  config_manager.hpp  main.cpp
mediacopier-cli/common/: CMakeLists.txt  resources.qrc.in
mediacopier-cli/etc/: mediacopier.desktop.in
mediacopier-cli/lang/: lang_de.ts
mediacopier-cli/mediacopier-kde/: CMakeLists.txt
mediacopier-cli/mediacopier-qt/: CMakeLists.txt
mediacopier-cli/source/: cli.cpp  cli.hpp  config.cpp  config.hpp  core.hpp  main.cpp  status.cpp  status.hpp  worker.cpp  worker.hpp
mediacopier-cli/src/: ConfigManager.cpp  ConfigManager.hpp  config.cpp  config.hpp  config_manager.cpp  config_manager.hpp  job.cpp  job.hpp  main.cpp  worker.cpp  worker.hpp
mediacopier-cli/test/: data
mediacopier-gui/: CMakeLists.txt  dialog.cpp  dialog.hpp  dialog.ui  main.cpp  worker.cpp  worker.hpp
mediacopier-gui/lang/: lang_de.ts
mediacopier-gui/source/: config.cpp  config.hpp  main.cpp  status.hpp  worker.hpp
mediacopier-kde/: CMakeLists.txt  job.cpp  job.hpp  main.cpp  worker.cpp  worker.hpp
mediacopier-kde/src/: job.cpp  job.hpp  main.cpp  worker.cpp
mediacopier-lib/: CMakeLists.txt
mediacopier-lib/source/: duplicate_check.cpp  file_info_factory.cpp  file_info_image.cpp  file_info_image_jpeg.cpp  file_info_video.cpp  file_register.cpp  jpeg.cpp  operation_copy.cpp  operation_copy_jpeg.cpp  operation_move.cpp  operation_move_jpeg.cpp  operation_simulate.cpp  persistent_config.cpp
mediacopier-lib/src/: file_info_factory.cpp  file_info_register.cpp
mediacopier-lib/test/: CMakeLists.txt  common_test_fixtures.hpp  test_file_info_classes.cpp  test_file_operation_classes.cpp  test_file_register.cpp
mediacopier-qt/: CMakeLists.txt  resources.qrc.in
mediacopier-qt/lang/: README.md  lang_de.ts
mediacopier-qt/source/: config.cpp  config.hpp  main.cpp  status.cpp  status.hpp  worker.cpp  worker.hpp
mediacopier/cli/: CMakeLists.txt
mediacopier/lib/: CMakeLists.txt
mediacopier/src/: Executor.cpp  FileInfoFactory.cpp  FileInfoImage.cpp  FileInfoImageJpeg.cpp  FileInfoVideo.cpp  FileOperationCopy.cpp  FileOperationCopyJpeg.cpp  FileOperationMove.cpp  FileOperationMoveJpeg.cpp  FileRegister.cpp  MediaCopier.cpp  file_info_factory.cpp  file_info_image.cpp  file_info_image_jpeg.cpp  file_info_register.cpp  file_info_video.cpp  file_operation_copy.cpp  file_operation_copy_jpeg.cpp  file_operation_move.cpp  file_operation_move_jpeg.cpp  file_operation_simulate.cpp  file_register.cpp  version.hpp.in
mediacopier/test/: CMakeLists.txt  CommonTestFixtures.hpp  FileInfoTypeDetector.hpp  common_test_fixtures.hpp  file_info_type_detector.hpp  test_fileInfoClasses.cpp  test_fileOperationClasses.cpp  test_filePathFactory.cpp  test_fileRegister.cpp  test_file_operation_classes.cpp  test_file_register.cpp  test_run.cpp
src/mcp/: CMakeLists.txt  mcp.cpp
src/mediacopier/: CMakeLists.txt  ConfigManager.cpp  FileJpeg.cpp  FileManager.cpp  FileMeta.cpp  FileOperation.cpp  FileOperationStrategy.cpp  ProgressBar.cpp  Run.cpp
src/mmv/: CMakeLists.txt  mmv.cpp
test/: CMakeLists.txt  generate_test_data.sh  test_ConfigManager.cpp  test_FileOperation.cpp  test_FileOperationStrategy.cpp
(+303 files in other folders)
